--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
     # This job uses a matrix strategy to run the job four times, once for each specified Node version. For more information, see "[AUTOTITLE](/actions/using-jobs/using-a-matrix-for-your-jobs)."
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [14.x, 16.x, 18.x, 20.x]
 #
     steps:
       # This step uses the `actions/checkout` action to download a copy of your repository on the runner.
@@ -31,5 +31,11 @@ jobs:
       # This step uses the `actions/setup-node` action to set up Node.js for each version indicated by the `matrix.node-version` key above.
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
-
+        with:
+          node-version: ${{ matrix.node-version }}
+      # This step runs `npm ci` to install any dependencies listed in your `package.json` file.
+      - run: npm ci
+      # This step runs the `build` script if there is one specified under the `scripts` key in your `package.json` file.
+      - run: npm run build --if-present
+      # This step runs the `test` script that is specified under the `scripts` key in your `package.json` file.
       - run: npm test
