--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,8 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ main ]
+  pull_request:
+    branches: [ develop ]
 
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [14.x, 18.x]
    
     steps:
       - uses: actions/checkout@v3
