--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
           
       - run: npm ci
       - run: npm test
-      - run: node math.go
+      - run: node math.js
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
